--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@inertiajs/vue3": "^1.0.15",
         "chart.js": "^4.3.0",
         "heroicons": "^2.0.18",
+        "moment": "^2.30.1",
         "primeicons": "^6.0.1",
         "primevue": "^3.45.0"
     }
