--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/vue3": "^1.0.15",
+        "cash-dom": "^8.1.5",
         "chart.js": "^4.3.0",
         "heroicons": "^2.0.18",
         "moment": "^2.30.1",
