--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "heroicons": "^2.0.18",
         "moment": "^2.30.1",
         "primeicons": "^6.0.1",
-        "primevue": "^3.45.0"
+        "primevue": "^3.45.0",
+        "vue3-apexcharts": "^1.5.2"
     }
 }
